--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.12.0",
     "tantivy>=0.25.0",
     "platformdirs>=4.5.1",
+    "cyclopts>=4.4.4",
 ]
 
 [project.scripts]
