--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "tantivy>=0.25.0",
     "platformdirs>=4.5.1",
     "cyclopts>=4.4.4",
+    "pydantic-ai-slim[openai]>=1.40.0",
 ]
 
 [project.scripts]
